@@ -25,6 +25,11 @@
 	Rev 7245:
 	* actors.*, gamewin.cc, npctime.cc: Fixed bug #3598886 "HP < 1 should regen
 	  faster than per hour".
+	Rev 7251
+	* data/Makefile.am: Making the expack-generated header files exult_bg_flx.h,
+	  data/exult_flx.h, data/exult_iphone_flx.h and data/exult_si_flx.h depend
+	  on their respective flex files.
+
 
 2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* shapeid.h, shapes/vgafile.*, usecode/conversation.cc: Fixed bug #3001914:
